# api/controllers/answers.js
@@ -2,23 +2,19 @@ import { Answer } from './../models';
 
 const createAnswer = (req, res) => {
   Answer.build({
-    question_id: req.swagger.params.body.question_id,
-    user_id: req.swagger.params.body.user_id,
-    a: req.swagger.params.body.a,
+    question_id: req.body.question_id,
+    user_uuid: req.body.user_uuid,
+    a: req.body.a,
   })
   .save()
-  .then(answer => res.json({
-    answer,
-  }));
+  .then(answer => res.json(answer));
 };
 
 const getAnswers = (req, res) => {
   Answer.findAll({
-    user_id: req.swagger.params.user_id,
+    user_uuid: req.user_uuid,
   })
-  .then(answers => res.json({
-    answers,
-  }));
+  .then(answers => res.json(answers));
 };
 
 export {
